Made changes in main.css to fix image stretching and moved the caption outside the image

--- a/main.css
+++ b/main.css
@@ -5,16 +5,22 @@ nav {
 }
 
 footer {
-    margin-top: 10px;
+    margin: 10px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
 }
 
 img {
-    height: 600px;
-    width: 100px;
+    height: 500px;
+    width: 300px;
+    object-fit: contain;
 }
 
 .welcome {
     text-align: center;
+}
+
+.carousel-caption {
+    position: static;
+    color: black;
 }
